my-calculator-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-calculator
spec:
  type: NodePort
  selector:
    app: my-calculator
  ports:
    - protocol: TCP
      port: 80        # Porta do serviço
      targetPort: 5000 # Porta do container
      nodePort: 30001  # Porta externa para acesso
